# Parallar

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  Makefile  NOTICE  README.md  SECURITY.md  VERIFY.md  demo.sh  reset.sh  wrangler.app.toml  wrangler.jsonc  wrangler.www.toml
contracts/claim_factory/: Cargo.toml
contracts/claim_factory/src/: lib.rs  test.rs
contracts/claim_factory/test_snapshots/test/: claimable_type_is_immutable.1.json  deploy_claimable_creates_cross_bound_family.1.json  ineligible_collateral_rejected.1.json
contracts/claim_settlement/: Cargo.toml
contracts/claim_settlement/src/: lib.rs  test.rs
contracts/claim_settlement/test_snapshots/test/: claim_after_full_settle_reverts.1.json  claim_before_grace_reverts.1.json  claim_direct_pays_single_buyer_after_grace.1.json  double_claim_reverts.1.json  forged_claim_proof_reverts.1.json  full_settle_after_claim_reverts.1.json  keeper_full_settle_still_works.1.json  two_buyers_each_claim_their_share.1.json
contracts/confidential_tranched_vault/: Cargo.toml
contracts/confidential_tranched_vault/src/: lib.rs  test.rs
contracts/confidential_tranched_vault/test_snapshots/test/: confidential_buy_advances_commitment_and_splits_premium_by_tranche.1.json  forged_solvency_proof_reverts.1.json  junior_takes_first_loss_under_confidential_cover.1.json  pay_allocations_requires_the_bound_settlement_auth.1.json  proven_withdrawal_burns_tranche_shares.1.json  withdrawal_collateral_after_must_match_real_reserve.1.json
contracts/confidential_vault/: Cargo.toml
contracts/confidential_vault/src/: lib.rs  test.rs
contracts/confidential_vault/test_snapshots/test/: buy_with_collateral_exceeding_reserve_reverts.1.json  confidential_buy_advances_the_hidden_commitment.1.json  pay_allocations_requires_the_bound_settlement_auth.1.json  premium_distributes_to_underwriters_minus_protocol_cut.1.json  proven_withdrawal_releases_collateral.1.json  settlement_pays_from_reserve.1.json  withdrawal_collateral_after_must_match_real_reserve.1.json  wrong_journal_length_reverts.1.json
contracts/settlement/: Cargo.toml
contracts/settlement/src/: lib.rs  test.rs
contracts/settlement/test_snapshots/test/: forged_proof_reverts.1.json  replay_same_epoch_reverts.1.json  settle_is_permissionless_no_privileged_caller.1.json  settle_verifies_bindings_and_pays_through_vault.1.json  settling_before_deadline_reverts.1.json  stale_position_root_reverts.1.json  tampered_allocation_root_reverts.1.json  wrong_instrument_reverts.1.json
contracts/tranched_vault/: Cargo.toml
contracts/tranched_vault/src/: lib.rs  test.rs
contracts/tranched_vault/test_snapshots/test/: deposit_to_unknown_tranche_rejected.1.json  junior_earns_more_premium_by_weight.1.json  junior_takes_first_loss_then_senior.1.json  loss_is_shared_pro_rata_within_a_tranche.1.json  loss_within_junior_spares_senior_entirely.1.json  pay_allocations_requires_the_bound_settlement_auth.1.json  withdraw_below_cover_floor_rejected.1.json  withdraw_returns_loss_adjusted_collateral.1.json
contracts/yield_factory/: Cargo.toml
contracts/yield_factory/src/: lib.rs  test.rs
contracts/yield_factory/test_snapshots/test/: deploy_protected_creates_cross_bound_family.1.json  deploy_tranched_creates_cross_bound_tranched_family.1.json  premium_outside_tier_band_rejected.1.json  risk_priced_tiers_yield_different_net_coupons.1.json
contracts/yield_router/: Cargo.toml
contracts/yield_router/src/: lib.rs  test.rs
contracts/yield_router/test_snapshots/test/: claim_dist_fee_requires_admin.1.json  two_holders_split_net_coupon_pro_rata.1.json  unwrap_returns_bond_and_lapses_cover.1.json  wrap_beyond_reserve_reverts.1.json  wrap_route_coupon_full_waterfall.1.json
contracts/yield_vault/: Cargo.toml
contracts/yield_vault/src/: lib.rs  test.rs
contracts/yield_vault/test_snapshots/test/: buy_beyond_collateral_rejected.1.json  buyer_premium_distributes_to_seller_and_protocol.1.json  float_yield_distributes_to_underwriters_minus_protocol_share.1.json  haircut_tightens_the_solvency_floor.1.json  late_depositor_earns_nothing_from_past_premium.1.json  pay_allocations_pays_from_reserve_not_premium.1.json  pay_allocations_requires_the_bound_settlement_auth.1.json  premium_distribution_conserves_value.1.json  receive_premium_from_router_distributes.1.json  two_sellers_split_premium_pro_rata.1.json  withdraw_cannot_drop_reserve_below_cover.1.json  withdraw_settles_premium_then_returns_collateral.1.json
frontend/commit-wasm/: Cargo.toml
frontend/commit-wasm/examples/: ref.rs
frontend/commit-wasm/src/: lib.rs
prover/: Cargo.toml
prover/guests/claim_credit_v1/: Cargo.toml
prover/guests/claim_credit_v1/src/: lib.rs  test.rs
prover/guests/settle_credit_v1/: Cargo.toml
prover/guests/settle_credit_v1/src/: lib.rs  prop_test.rs  test.rs
prover/guests/settle_credit_v2/: Cargo.toml
prover/guests/settle_credit_v2/src/: lib.rs  test.rs
prover/guests/settle_credit_v3/: Cargo.toml
prover/guests/settle_credit_v3/src/: lib.rs  test.rs
prover/guests/settle_weather_v1/: Cargo.toml
prover/guests/settle_weather_v1/src/: lib.rs  prop_test.rs  test.rs
prover/guests/solvency_v1/: Cargo.toml
prover/guests/solvency_v1/src/: lib.rs  test.rs
prover/host/: Cargo.toml
prover/host/src/: history_builder.rs  keeper.rs  lib.rs  main.rs
prover/host/test_snapshots/: full_settlement_pays_out_with_real_proof.1.json  real_parallar_proof_verifies_on_chain.1.json
prover/host/tests/: gen_new_scenarios.rs  gen_partial_scenario.rs  gen_scenario.rs  gen_weather_scenario.rs  onchain_verify.rs  scale.rs
prover/methods/: Cargo.toml
prover/methods/guest/: Cargo.toml
prover/methods/guest-claim-credit-v1/: Cargo.toml
prover/methods/guest-credit-v2/: Cargo.toml
prover/methods/guest-credit-v3/: Cargo.toml
prover/methods/guest-solvency/: Cargo.toml
prover/methods/guest-weather/: Cargo.toml
prover/methods/src/: lib.rs
prover/proptests/: Cargo.toml
prover/proptests/src/: lib.rs
prover/proptests/tests/: parity.rs  props.rs
spikes/poseidon_parity/: Cargo.toml
spikes/poseidon_parity/src/: lib.rs
(+73 files in other folders)
