# Parallar — contract workspace (TECH_SPEC §9).
# external/ (cloned examples) and spikes/ (Sprint 0 derisk crates) are standalone.
[workspace]
resolver = "2"
members = ["contracts/bond", "contracts/vault", "contracts/settlement", "contracts/factory", "contracts/claim_settlement", "contracts/yield_vault", "contracts/yield_router", "contracts/yield_factory", "contracts/tranched_vault"]
exclude = ["external", "spikes", "prover"]

[workspace.dependencies]
soroban-sdk = "25.3.0"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true
