# Parallar prover workspace (RISC Zero / native toolchain — separate from the
# soroban contracts workspace). Host + zkVM methods crates are added alongside the
# guest logic as Sprint 2 proceeds.
[workspace]
resolver = "2"
members = ["guests/settle_credit_v1", "guests/settle_weather_v1", "host", "methods"]
# methods/guest is cross-compiled for the zkVM target by risc0-build, not a native member.
exclude = ["methods/guest", "methods/guest-weather"]
