# Parallar prover workspace (RISC Zero / native toolchain — separate from the
# soroban contracts workspace). Host + zkVM methods crates are added alongside the
# guest logic as Sprint 2 proceeds.
[workspace]
resolver = "2"
members = ["guests/settle_credit_v1", "guests/settle_weather_v1", "guests/settle_credit_v2", "guests/claim_credit_v1", "guests/solvency_v1", "proptests", "host", "methods"]
# methods/guest is cross-compiled for the zkVM target by risc0-build, not a native member.
exclude = ["methods/guest", "methods/guest-weather", "methods/guest-credit-v2", "methods/guest-claim-credit-v1"]
