[package]
name = "parallar-prover-host"
version = "0.0.0"
edition = "2021"
publish = false

# Soroban-aware encoding bridge + the prover host CLI. The lib produces the canonical
# Address-XDR bytes the guest folds (guest config_hash / allocation_root == the contracts,
# byte-for-byte), runs the RISC Zero settlement proof, and emits a submittable artifact; the
# `parallar-prover` binary wraps `prove` / `submit`. `history-builder` is the next addition.

[lib]
doctest = false

[[bin]]
name = "parallar-prover"
path = "src/main.rs"

[dependencies]
soroban-sdk = "25.3.0"
settle-credit-v1 = { path = "../guests/settle_credit_v1" }
settle-weather-v1 = { path = "../guests/settle_weather_v1" }
settle-credit-v2 = { path = "../guests/settle_credit_v2" }
claim-credit-v1 = { path = "../guests/claim_credit_v1" }
parallar-methods = { path = "../methods" }
risc0-zkvm = "3.0"
sha2 = "0.10"
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
stellar-strkey = "0.0.13"

[dev-dependencies]
soroban-sdk = { version = "25.3.0", features = ["testutils"] }
ed25519-dalek = { version = "2", default-features = false }
parallar-factory = { path = "../../contracts/factory" }
parallar-settlement = { path = "../../contracts/settlement" }
parallar-vault = { path = "../../contracts/vault" }
