[package]
name = "parallar-methods"
version = "0.0.0"
edition = "2021"
publish = false

# Builds the RISC Zero guest and embeds GUEST_ELF + GUEST_ID (the image_id the
# instrument's settlement contract is pinned to).

[build-dependencies]
risc0-build = "3.0"

[package.metadata.risc0]
methods = ["guest", "guest-weather", "guest-credit-v2"]
