[package]
name = "settle-credit-v2-guest"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
risc0-zkvm = { version = "3.0", default-features = false, features = ["std"] }
settle-credit-v2 = { path = "../../guests/settle_credit_v2" }

# Standalone (its own workspace) — risc0-build cross-compiles this for the zkVM target.
[workspace]
