[package]
name = "settle-weather-v1-guest"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
risc0-zkvm = { version = "3.0", default-features = false, features = ["std"] }
settle-weather-v1 = { path = "../../guests/settle_weather_v1" }

# Standalone (its own workspace) — risc0-build cross-compiles this for the zkVM target.
[workspace]
